// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CarouselItemsContainer /> It should hide index 1`] = `
<div>
  <button
    class="arrowButton left"
    data-testid="button-left"
  >
    <svg
      fill="none"
      fill-rule="evenodd"
      height="15"
      preserveAspectRatio="xMidYMax meet"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      viewBox="-.2 -.3 8 5"
      width="40"
    >
      <polyline
        points="1 1 3.77984472 4 6.53846154 1"
      />
    </svg>
  </button>
  <div
    class="container flexDisplay alignCenter fullHeight"
    style="transform: translateX(0px); transition-duration: 0s;"
  >
    <div
      class="container fullHeight fullWidth fullMaxHeight fullMinWidth"
    >
      <p>
        first
      </p>
    </div>
    <div
      class="container fullHeight fullWidth fullMaxHeight fullMinWidth"
    >
      <p>
        second
      </p>
    </div>
  </div>
  <button
    class="arrowButton right"
    data-testid="button-right"
  >
    <svg
      fill="none"
      fill-rule="evenodd"
      height="15"
      preserveAspectRatio="xMidYMax meet"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      viewBox="-.2 -.3 8 5"
      width="40"
    >
      <polyline
        points="1 1 3.77984472 4 6.53846154 1"
      />
    </svg>
  </button>
</div>
`;

exports[`<CarouselItemsContainer /> It should render 1`] = `
<div>
  <span>
    1/2
  </span>
  <button
    class="arrowButton left"
    data-testid="button-left"
  >
    <svg
      fill="none"
      fill-rule="evenodd"
      height="15"
      preserveAspectRatio="xMidYMax meet"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      viewBox="-.2 -.3 8 5"
      width="40"
    >
      <polyline
        points="1 1 3.77984472 4 6.53846154 1"
      />
    </svg>
  </button>
  <div
    class="container flexDisplay alignCenter fullHeight"
    style="transform: translateX(0px); transition-duration: 0s;"
  >
    <div
      class="container fullHeight fullWidth fullMaxHeight fullMinWidth"
    >
      <p>
        first
      </p>
    </div>
    <div
      class="container fullHeight fullWidth fullMaxHeight fullMinWidth"
    >
      <p>
        second
      </p>
    </div>
  </div>
  <button
    class="arrowButton right"
    data-testid="button-right"
  >
    <svg
      fill="none"
      fill-rule="evenodd"
      height="15"
      preserveAspectRatio="xMidYMax meet"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      viewBox="-.2 -.3 8 5"
      width="40"
    >
      <polyline
        points="1 1 3.77984472 4 6.53846154 1"
      />
    </svg>
  </button>
</div>
`;
